deploy: programacioniesbalmis/programaciondam@06c767d44ef1e25b12dd85534a3967cff0666c01

--- a/u7_funciones/ejercicios/2_ejercicios/2_ejercicios_funciones.html
+++ b/u7_funciones/ejercicios/2_ejercicios/2_ejercicios_funciones.html
@@ -610,6 +610,9 @@ Presiona cualquier tecla para salir...
 <p><strong>Requisitos:</strong></p>
 <ul>
 <li>
+<p>El ejercicio deberá tener un método <strong>MostrarMenu</strong> que devolverá entero, este método solo se encarga de recoger la opción del menú y comprobar que está entre 1 y 4, sacando el mensaje de error "Opción no válida" en caso de de que no esté en el rango, se repetirá hasta que se introduzca la opción valida. El switch va en la main.</p>
+</li>
+<li>
 <p>Si no sabes como es el proceso de conversión matemático, puedes consultar el proceso de decimal a binario en el siguiente enlace: <a href="https://es.wikipedia.org/wiki/Sistema_binario#Decimal_a_binario">Decimal a binario</a><br>
 Para el resto de sistemas es análogo solo que dividiendo entre 8 y 16 respectivamente.</p>
 </li>
@@ -684,7 +687,7 @@ Mínimo entre 5 y 3: 3
 <ul>
 <li><code>int ValorAbsoluto(int n)</code> que retorne el valor absoluto</li>
 <li><code>bool EsPar(int n)</code> que determine si es par</li>
-<li><code>bool EsPrimo(int n)</code> que determine si es primo (solo para números pequeños)</li>
+<li><code>bool EsPrimo(int n)</code> que determine si es primo (usando una función auxiliar con el cálculo, que será llamada desde esta)</li>
 <li><code>int Maximo(int a, int b)</code> que retorne el mayor</li>
 <li><code>int Minimo(int a, int b)</code> que retorne el menor</li>
 </ul>
