deploy: programacioniesbalmis/programaciondam@60163ae2df488474e39b5fc65c54b0af7f63dada

--- a/semipresencial/guia_didactica_semipresencial.html
+++ b/semipresencial/guia_didactica_semipresencial.html
@@ -21,7 +21,7 @@ code[class*=language-],pre[class*=language-]{color:#333;background:0 0;font-fami
   font-family: 'Catamaran';
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/catamaran/v27/o-0bIpQoyXQa2RxT7-5B6Ryxs2E_6n1iPHjd5a7dvg.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/catamaran/v28/o-0bIpQoyXQa2RxT7-5B6Ryxs2E_6n1iPHjd5a7dvg.ttf) format('truetype');
 }
 @page a4landscape {
   size: A4 landscape;
@@ -994,7 +994,7 @@ Con este proceder se pretende evitar que los alumnos entreguen prácticas copiad
 </div>
 <ul>
 <li>
-<p><strong>Quincena 6 del 1 noviembre - 14 diciembre</strong></p>
+<p><strong>Quincena 6 del 1 diciembre - 14 diciembre</strong></p>
 <ul>
 <li><strong>Semana 1</strong>
 <ul>
