deploy: programacioniesbalmis/programaciondam@540697f73fe1ccb179ceb51a099dc9e6a7468127

--- a/u7_funciones/ejercicios/2_ejercicios/2_ejercicios_funciones.html
+++ b/u7_funciones/ejercicios/2_ejercicios/2_ejercicios_funciones.html
@@ -273,7 +273,7 @@ Presiona cualquier tecla para salir...
 </pre>
 <p><strong>Requisitos:</strong></p>
 <ul>
-<li>Método llamado <strong>Lee</strong> que recoja los siguientes datos de un usuario: número de departamento (int), coste por hora(float) y horas trabajadas (float) y los devuelva. <strong>Usará tuplas para devolverlos</strong></li>
+<li>Método llamado <strong>Lee</strong> que pida al usuario los siguientes datos: número de departamento (int), coste por hora(float) y horas trabajadas (float) y los devuelva. <strong>Usará tuplas para devolverlos</strong></li>
 <li>Escribe un método llamado <strong>Salario</strong> que para calcular el salario semanal multiplique el coste por hora por el número de horas trabajadas, que le llegarán como parámetros de entrada. <strong>El método devolverá el salario (float)</strong>.</li>
 <li>Escribe un método llamado <strong>Muestra</strong> que muestre el salario semanal, el número del departamento, el coste por hora y las horas trabajadas, que le llegarán todas por parámetro.</li>
 <li>Podéis fijaros en el siguiente DEM:</li>
@@ -701,10 +701,10 @@ Mínimo entre 5 y 3: 3
 <pre class="salida_consola">Ejercicio 6. Polimorfismo funcional. Gestión Taxi
 
 Coste carrera lunes mañana -&gt; 21,38
-Coste carrera lunes noche -&gt; 22,10
+Coste carrera lunes noche -&gt; 27,80
 Coste carrera lunes con mi mascota Dogo -&gt; 22,38
 Coste carrera Domingo de Ramos -&gt; 29,94
-Coste carrera Domingo noche -&gt; 25,66
+Coste carrera Domingo noche -&gt; 27,80
 Coste carrera Domingo de Ramos noche con Dogo y Minina -&gt; 31,94
 
 Pulse una tecla para finalizar...
