deploy: programacioniesbalmis/programaciondam@9fcdd3dc9cf79f54a27d38b49371881a21e64222

--- a/ejercicios.html
+++ b/ejercicios.html
@@ -271,7 +271,7 @@
                     </div>
                 </div>
             </div>
-<!-- INICIO CONTENIDOS OCULTOS
+
             <div class="col-xxl-6">
                 <div class="text-start border rounded p-3 shadow w-100">
 
@@ -295,7 +295,7 @@
             <div class="col-xxl-6">
                 <div class="text-start border rounded p-3 shadow w-100">
                     <div class="collapsed" data-bs-toggle="collapse" href="#bloque11" role="button">
-                        <div class="h4">Unidad 11 - Cadenas y EERR.</div>
+                        <div class="h4">Unidad 11 - Cadenas y Expresiones Regulares.</div>
                     </div>
                     <div class="collapse" id="bloque11">
                         <ul class="list-group list-group-numbered">
@@ -308,13 +308,15 @@
                             <li class="h6 list-group-item list-group-item-action">
                                 <a target="_blank"
                                     href="./u11_poo_cadenas_y_er/ejercicios/2_ejercicios/2_ejercicios_er.html">
-                                    EERR
+                                    Expresiones Regulares
                                 </a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
+
+            <!-- INICIO CONTENIDOS OCULTOS
 
             <div class="col-xxl-6">
                 <div class="text-start border rounded p-3 shadow w-100">
