--- a/index.html
+++ b/index.html
@@ -111,12 +111,11 @@
                     </div>
                 </a>
             </div>
- <!-- INICIO CONTENIDOS OCULTOS 
 
              <div class="col-xxl-6">
-                <a href="./u10_poo/u10_poo.html">
+                <a href="./u10_poo_introduccion/u10_poo_introduccion.html">
                     <div class="text-start border rounded p-3 shadow btn btn-outline-success w-100">
-                        <div class="h4">Unidad 10 - POO.</div>
+                        <div class="h4">Unidad 10 - Introducción a la POO.</div>
                     </div>
                 </a>
             </div>
@@ -128,6 +127,8 @@
                     </div>
                 </a>
             </div>
+
+<!-- INICIO CONTENIDOS OCULTOS 
 
           <div class="col-xxl-6">
                 <a href="./u12_poo_tipos_valor/u12_poo_tipos_valor.html">
