deploy: programacioniesbalmis/programaciondam@2b4c73ab862b121f57eb5bda4d265f076be0d54a

--- a/u8_arrays/ejercicios/1_ejercicios/1_ejercicios_arrays.html
+++ b/u8_arrays/ejercicios/1_ejercicios/1_ejercicios_arrays.html
@@ -339,7 +339,7 @@ Presiona cualquier tecla para salir...
 <p>Recuerda la correspondencia entre los caracteres ASCII y los números:  65-90 (A-Z) y 97-122 (a-z).</p>
 </li>
 <li>
-<p>Crea el método <strong>ConvierteMayusculasMinusculas</strong> que convierta las mayúsculas a minúsculas y viceversa, de un array pasado como parámetro, usando <code>char.IsLower()</code> y <code>char.IsUpper()</code> para detectar el tipo de carácte y <code>char.ToLower()</code> y <code>char.ToUpper()</code> para las conversiones.</p>
+<p>Crea el método <strong>ConvierteMayusculasMinusculas</strong> que convierta las mayúsculas a minúsculas y viceversa, de un array pasado como parámetro, usando <code>char.IsLower()</code> y <code>char.IsUpper()</code> para detectar el tipo de carácte y <code>char.ToLower()</code> y <code>char.ToUpper()</code> para las conversiones. <em><strong>Este método no devolverá el array, modificará el pasado por parámetro</strong></em>.</p>
 </li>
 <li>
 <p>Visualizar el array con <code>foreach</code> antes y después de la modificación. Usando el método MuestraArray, al que le llegará el array a mostrar y una cadena con el texto que se muestra antes del array (Array original).</p>
