deploy: programacioniesbalmis/programaciondam@579ce635f625cf0977de5decb82a39ffe8afb677

--- a/u8_arrays/ejercicios/1_ejercicios/1_ejercicios_arrays.html
+++ b/u8_arrays/ejercicios/1_ejercicios/1_ejercicios_arrays.html
@@ -256,7 +256,16 @@ code[class*=language-],pre[class*=language-]{color:#333;background:0 0;font-fami
           <a href="#ejercicio-7-proyecto-análisis-de-temperaturas" class="md-toc-link">
             <p>Ejercicio 7. Proyecto análisis de temperaturas</p>
 
-          </a></div><div class="md-toc-link-wrapper" style="padding:0;;display:list-item;list-style:square;margin-left:42px">
+          </a></div>
+        </div>
+      </details>
+    <details style="padding:0;;padding-left:0px;" open="">
+        <summary class="md-toc-link-wrapper">
+          <a href="#ejercicios-ampliación" class="md-toc-link"><p>Ejercicios Ampliación</p>
+</a>
+          </summary>
+        <div>
+          <div class="md-toc-link-wrapper" style="padding:0;;display:list-item;list-style:square;margin-left:42px">
           <a href="#ejercicio-8-proyecto-estadísticas-de-ventas" class="md-toc-link">
             <p>Ejercicio 8. Proyecto estadísticas de ventas</p>
 
@@ -503,6 +512,7 @@ Presiona cualquier tecla para salir...
 <li>En la Main crea dos array de <code>string[]</code> uno con los nombres de los días de la semana y otro con los nombres abreviados (primera letra). Estos array se usarán para conseguir una salida como la que se expone en el ejercicio.</li>
 </ul>
 </div>
+<h2 id="ejercicios-ampliación">Ejercicios Ampliación </h2>
 <div class="box_bg_lightgreen">
 <h3 id="ejercicio-8-proyecto-estadísticas-de-ventas">Ejercicio 8. Proyecto estadísticas de ventas </h3>
 <p>El proyecto 8 analizará las ventas mensuales de una empresa durante un año. Este ejercicio estará formado por varios métodos que definirás en el proyecto ejercicio8.</p>
