deploy: programacioniesbalmis/programaciondam@1045ce8fe014fc91829b9c4952149b2c5d45caf4

--- a/u8_arrays/ejercicios/2_ejercicios/2_ejercicios_arrays.html
+++ b/u8_arrays/ejercicios/2_ejercicios/2_ejercicios_arrays.html
@@ -316,7 +316,7 @@ Presiona cualquier tecla para salir...
 </div>
 <div class="box_bg_lightgreen">
 <h3 id="ejercicio-3-transposición-de-arrays">Ejercicio 3. Transposición de arrays </h3>
-<p>Programa en el proyecto ejercicio3 una dentada de tres tablas con 5 columnas cada tabla.  Posteriormente se deberá crear otra tabla dentada <strong>permutando filas por columnas</strong> (transposición).</p>
+<p>Programa en el proyecto ejercicio3 una tablas dentada que contenga tres tablas con 5 columnas cada una.  Posteriormente se deberá crear otra tabla dentada <strong>permutando filas por columnas</strong> (transposición).</p>
 <pre class="salida_consola">Ejercicio 3: Transposición de arrays
 
 Introduce los elementos del array 3x5:
@@ -352,15 +352,19 @@ Presiona cualquier tecla para salir...
 </pre>
 <p><strong>Requisitos:</strong></p>
 <ul>
-<li>Método <strong>LeeArray</strong> que lea una tabla dentada de 3x5 desde el usuario.</li>
-<li>Método <strong>CreaTranspuesta</strong> que genere el array transpuesto de 5x3 y lo devuelva.
+<li>Método <strong><code>int[][] LeeArray(int filas, int columnas)</code></strong> que lea una tabla dentada de 3x5 desde el usuario.</li>
+<li>Método <strong><code>int[][] CreaTranspuesta(int[][] original)</code></strong> que genere el array transpuesto de 5x3 y lo devuelva.
 <ul>
 <li>El array transpuesto convierte filas en columnas y viceversa.</li>
-<li>El elemento <code>[i][j]</code> del original va a la posición <code>[j][i]</code> del transpuesto.</li>
+<li>El elemento <strong><code>[i][j]</code></strong> del original va a la posición <strong><code>[j][i]</code></strong> del transpuesto.</li>
 </ul>
 </li>
-<li>Método <strong>MuestraArray</strong> al que le llega el array y el texto del título y muestra un array formateado.</li>
+<li>Método <strong><code>void MuestraArray(int[][] array, string titulo)</code></strong> al que le llega el array y el texto del título y muestra un array formateado.</li>
 </ul>
+<div class="admonition tip">
+<p class="admonition-title">Pista</p>
+<p>Aunque en el ejemplo y durante el enunciado se habla de 3 filas y 5 columnas, el código debe ser genérico y funcionar para cualquier tamaño de array dentado inclusive cuadrados. Solo se indicará en el Main los tamaños 3 y 5 al llamar a <strong><code>LeeArray</code></strong> y el resto del código debe funcionar para cualquier tamaño.</p>
+</div>
 </div>
 <div class="box_bg_lightgreen">
 <h3 id="ejercicio-4-jardín-de-flores-con-inventario-colorido">Ejercicio 4. Jardín de flores con inventario colorido </h3>
