deploy: programacioniesbalmis/programaciondam@64d9ef5ea0867edfaf978c6fd4041dc53fe25c42

--- a/u9_enumerados/ejercicios/1_ejercicios/1_ejercicios_enumerados.html
+++ b/u9_enumerados/ejercicios/1_ejercicios/1_ejercicios_enumerados.html
@@ -504,8 +504,8 @@ Operación: s
 <p><strong>Requisitos:</strong></p>
 <ul>
 <li>Definir enumeración <strong>TurnoTrabajo</strong> con atributo <code>[Flags]</code>: Ninguno=0b_0000_0000, Mañana=0b_0000_0001, Tarde=0b_0000_0010, Noche=0b_0000_0100, FinDeSemana=0b_0000_1000.</li>
-<li>Método <strong>ParseaTurnos</strong> que convierta una string con todos los  caracteres de los turnos (parámetro de entrada al método), a la variable de retorno de tipo TurnoTrabajo con la combinación de turnos, usando operaciones de bits.</li>
-<li>Método <strong>CaracterATurno</strong> que a partir de un carácter ('M','T','N','F') como parámetro de enrtada, devuelva el valor correspondiente de la enumeración <strong><code>TurnoTrabajo</code></strong>. Puedes usar un switch de expresión.</li>
+<li>Método <strong>CaracterATurno</strong> que a partir de un carácter ('M','T','N','F') como parámetro de entrada, devuelva el valor correspondiente de la enumeración <strong><code>TurnoTrabajo</code></strong>. Puedes usar un switch de expresión.</li>
+<li>Método <strong>ParseaTurnos</strong> que convierta una string con todos los  caracteres de los turnos (parámetro de entrada al método), a la variable de retorno de tipo TurnoTrabajo con la combinación de turnos, usando operaciones de bits y el método anterior.</li>
 <li>Método <strong>TieneTurno</strong> al que le llegan dos parámetros de entrada de tipo TurnoTrabajo, uno con todos los turnos del empleado y otro con el turno a verificar. Con esto se debe verificar si un empleado tiene un turno específico usando operaciones de bits.</li>
 <li>Método <strong>CalculaHorasSemanales</strong> que calcule el total de horas semanales del empleado (parámetro de entrada TurnoTrabajo). Según los turnos que tenga, se irán añadiendo las horas según  (Mañana=8h, Tarde=8h, Noche=8h, FinDeSemana=10h). Usa el método TieneTurno para comprobar si el empleado ha hecho ese turno.</li>
 <li>Método <strong>CalculaSalario</strong> método parecido al anterior, pero que calcule salario base (€10/hora normal, €15/hora noche, €20/hora fin de semana). Usa el método TieneTurno para comprobar si el empleado ha hecho ese turno.</li>
