--- a/u10_poo_introduccion/ejercicios/1_ejercicios/1_ejercicios_poo_introduccion.html
+++ b/u10_poo_introduccion/ejercicios/1_ejercicios/1_ejercicios_poo_introduccion.html
@@ -237,10 +237,10 @@ code[class*=language-],pre[class*=language-]{color:#333;background:0 0;font-fami
           </a></div>
 </div>
 <h2 id="ejercicios-unidad-10">Ejercicios Unidad 10 </h2>
-<p><a href="./1_ejercicios_poo.pdf">Descargar estos ejercicios</a></p>
+<p><a href="./1_ejercicios_poo_introduccion.pdf">Descargar estos ejercicios</a></p>
 <div class="admonition info">
 <p class="admonition-title">Antes de empezar</p>
-<p>Para realizar estos ejercicios, deberás descargar los recursos del enlace de <a href="./recursos/1_ejercicios_poo_recurso.zip">proyecto_poo</a>. Como puedes ver, la solución está compuesta de varios proyectos. Cada uno de ellos corresponde con un ejercicio, deberás implementar todo el código, tanto de la Main como de los métodos que se piden en cada ejercicio. Cada proyecto contiene el test correspondiente, que deberás pasar para comprobar que has hecho el ejercicio correctamente.</p>
+<p>Para realizar estos ejercicios, deberás descargar los recursos del enlace de <a href="./recursos/1_ejercicios_poo_introduccion_recurso.zip">proyecto_poo</a>. Como puedes ver, la solución está compuesta de varios proyectos. Cada uno de ellos corresponde con un ejercicio, deberás implementar todo el código, tanto de la Main como de los métodos que se piden en cada ejercicio. Cada proyecto contiene el test correspondiente, que deberás pasar para comprobar que has hecho el ejercicio correctamente.</p>
 </div>
 <div style="page-break-after:always;"></div>
 <div class="box_bg_lightgreen">
