deploy: programacioniesbalmis/programaciondam@2b02205f6e4207ad8e69ac62198abaf2ed2342b1

--- a/u11_poo_cadenas_y_er/ejercicios/1_ejercicios/1_ejercicios_cadenas.html
+++ b/u11_poo_cadenas_y_er/ejercicios/1_ejercicios/1_ejercicios_cadenas.html
@@ -149,8 +149,8 @@ Tiko extendido: 😂 hola uno dos tres
 </pre>
 <p><strong>Requisitos:</strong></p>
 <ul>
-<li>Crear método TraducirTiko que reciba la cadena y la retorne modificada.</li>
-<li>El método TraducirTiko debe hacer uso de los métodos auxiliares SustituyeNumeros, EliminaLetras y TraduceOnomatopeyas.</li>
+<li>Crear método ConvierteATiko que reciba la cadena y la retorne modificada.</li>
+<li>El método ConvierteATiko debe hacer uso de los métodos auxiliares SustituyeNumeros, EliminaLetras y TraduceOnomatopeyas.</li>
 <li>Usar solo métodos de <code>string</code> y <code>StringBuilder</code>.</li>
 <li>No usar expresiones regulares.</li>
 <li>Implementar las tres reglas indicadas.</li>
