deploy: programacioniesbalmis/programaciondam@78604848b0dd23141d114bc7c11534a9376f98c4

--- a/ejercicios.html
+++ b/ejercicios.html
@@ -374,13 +374,11 @@
                 </div>
             </div>
 
-            <!-- INICIO CONTENIDOS OCULTOS
-
             <div class="col-xxl-6">
                 <div class="text-start border rounded p-3 shadow w-100">
 
                     <div class="collapsed" data-bs-toggle="collapse" href="#bloque15" role="button">
-                        <div class="h4">Unidad 10 - POO. Roles entre clases. Herencia.</div>
+                        <div class="h4">Unidad 15 - POO Roles. Herencia.</div>
                     </div>
                     <div class="collapse" id="bloque15">
                         <ul class="list-group list-group-numbered">
@@ -400,21 +398,22 @@
                 <div class="text-start border rounded p-3 shadow w-100">
 
                     <div class="collapsed" data-bs-toggle="collapse" href="#bloque16" role="button">
-                        <div class="h4">Unidad 16 - POO. Roles entre clases. Abstracción. Interfaces.</div>
+                        <div class="h4">Unidad 16 - POO Roles. Abstracción e Interfaces.</div>
                     </div>
                     <div class="collapse" id="bloque16">
                         <ul class="list-group list-group-numbered">
                             <li class="h6 list-group-item list-group-item-action">
                                 <a target="_blank"
                                     href="./u16_poo_roles_abstraccion/ejercicios/1_ejercicios/1_ejercicios_poo_roles_abstraccion.html">
-                                    POO. Roles entre clases. Abstracción. Interfaces.
+                                    POO Roles. Abstracción e Interfaces.
                                 </a>
                             </li>
-
                         </ul>
                     </div>
                 </div>
             </div>
+
+            <!-- INICIO CONTENIDOS OCULTOS
 
             <div class="col-xxl-6">
                 <div class="text-start border rounded p-3 shadow w-100">
