--- a/index.html
+++ b/index.html
@@ -147,17 +147,15 @@
             <div class="col-xxl-6">
                 <a href="./u14_poo_roles_todo_parte/u14_poo_roles_todo_parte.html">
                     <div class="text-start border rounded p-3 shadow btn btn-outline-success w-100">
-                        <div class="h4">Unidad 14 - POO. Roles entre clases (todo-parte).</div>
+                        <div class="h4">Unidad 14 - POO Roles. Todo-Parte.</div>
                     </div>
                 </a>
             </div>
 
-<!-- INICIO CONTENIDOS OCULTOS 
-
             <div class="col-xxl-6">
                 <a href="./u15_poo_roles_herencia/u15_poo_roles_herencia.html">
                     <div class="text-start border rounded p-3 shadow btn btn-outline-success w-100">
-                        <div class="h4">Unidad 15. POO. Roles entre clases (Herencia).</div>
+                        <div class="h4">Unidad 15 - POO Roles. Herencia.</div>
                     </div>
                 </a>
             </div>
@@ -165,10 +163,12 @@
             <div class="col-xxl-6">
                 <a href="./u16_poo_roles_abstraccion/u16_poo_roles_abstraccion.html">
                     <div class="text-start border rounded p-3 shadow btn btn-outline-success w-100">
-                        <div class="h4">Unidad 16 - POO. Roles entre clases. Abstracción. Interfaces.</div>
+                        <div class="h4">Unidad 16 - POO Roles. Abstracción e Interfaces.</div>
                     </div>
                 </a>
             </div>
+
+<!-- INICIO CONTENIDOS OCULTOS 
 
             <div class="col-xxl-6">
                 <a href="./u17_poo_gestion_de_errores/u17_poo_gestion_de_errores.html">
