--- a/u20_programacion_funcional/ejercicios/1_ejercicios/1_ejercicios_programacion_funcional.html
+++ b/u20_programacion_funcional/ejercicios/1_ejercicios/1_ejercicios_programacion_funcional.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-      <title>1_ejercicios_programacion_funcional</title>
+      <title>Ejercicios Unidad 20 - Programación Funcional</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
