--- a/u20_programacion_funcional/ejercicios/2_ejercicios/2_ejercicios_programacion_funcional.html
+++ b/u20_programacion_funcional/ejercicios/2_ejercicios/2_ejercicios_programacion_funcional.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-      <title>2_ejercicios_programacion_funcional</title>
+      <title>Ejercicios Unidad 20 - Programación Funcional</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
@@ -239,16 +239,16 @@ code[class*=language-],pre[class*=language-]{color:#333;background:0 0;font-fami
             <p>Ejercicio 4. Operaciones con funciones Lambda</p>
 
           </a></div><div class="md-toc-link-wrapper" style="padding:0;;display:list-item;list-style:square;margin-left:18px">
-          <a href="#ejercicio-5" class="md-toc-link">
-            <p>Ejercicio 5.</p>
+          <a href="#ejercicio-5--carrito-compra-con-funcional" class="md-toc-link">
+            <p>Ejercicio 5.  Carrito compra con funcional</p>
 
           </a></div>
 </div>
 <h2 id="ejercicios-unidad-20---programación-funcional---lambda">Ejercicios Unidad 20 - Programación Funcional - Lambda </h2>
-<p><a href="./1_ejercicios_programacion_funcional.pdf">Descargar estos ejercicios</a></p>
+<p><a href="./2_ejercicios_programacion_funcional.pdf">Descargar estos ejercicios</a></p>
 <div class="admonition info">
 <p class="admonition-title">Antes de empezar</p>
-<p>Para realizar estos ejercicios, deberás descargar los recursos del enlace de <a href="./recursos/1_ejercicios_programacion_funcional_recurso.zip">proyecto_poo</a>. Como puedes ver, la solución está compuesta de varios proyectos. Cada uno de ellos corresponde con un ejercicio, deberás implementar todo el código, tanto de la Main como de los métodos que se piden en cada ejercicio. Cada proyecto contiene el test correspondiente, que deberás pasar para comprobar que has hecho el ejercicio correctamente.</p>
+<p>Para realizar estos ejercicios, deberás descargar los recursos del enlace de <a href="./recursos/2_ejercicios_programacion_funcional_recurso.zip">proyecto_poo</a>. Como puedes ver, la solución está compuesta de varios proyectos. Cada uno de ellos corresponde con un ejercicio, deberás implementar todo el código, tanto de la Main como de los métodos que se piden en cada ejercicio. Cada proyecto contiene el test correspondiente, que deberás pasar para comprobar que has hecho el ejercicio correctamente.</p>
 </div>
 <div style="page-break-after:always;"></div>
 <div class="box_bg_lightgreen">
@@ -406,7 +406,7 @@ Pulsa una tecla para finalizar...
 </ul>
 </div> 
 <div class="box_bg_lightgreen">
-<h2 id="ejercicio-5">Ejercicio 5. </h2>
+<h2 id="ejercicio-5--carrito-compra-con-funcional">Ejercicio 5.  Carrito compra con funcional </h2>
 <p>Programa que permite crear un carrito de compra usando funciones lambda combinadas.</p>
 <pre class="salida_consola">Ejercicio 5. Carrito compra con funcional
 
