deploy: programacioniesbalmis/programaciondam@dc0dce55a566fa3ae9206cb4edcdd544983a7b3c

--- a/u13_poo_definir_tipos/ejercicios/1_ejercicios/1_ejercicios_poo_definir_tipos.html
+++ b/u13_poo_definir_tipos/ejercicios/1_ejercicios/1_ejercicios_poo_definir_tipos.html
@@ -379,12 +379,12 @@ Console.ReadKey();
 Creando productos del inventario...
 
 Producto 1: Laptop Gaming
-- Código: PRD001
+- Código: PR4ACT
 - Precio inicial: 1200.00€
 - Stock inicial: 15
 
 Producto 2: Mouse Inalámbrico  
-- Código: PRD002
+- Código: PR2MYV
 - Precio inicial: 25.50€
 - Stock inicial: 50
 
@@ -419,7 +419,7 @@ ERROR: El precio no puede ser negativo o cero
 
 === ESTADO FINAL DEL INVENTARIO ===
 Producto 1:
-- Código: PRD001
+- Código: PR4ACT
 - Nombre: Laptop Gaming
 
 Console.WriteLine("Presiona cualquier tecla para salir...");
